Fix off by one.

Fixes PR port-amd64/51944: sparse core dumps do not work